--- a/fake_real.ipynb
+++ b/fake_real.ipynb
@@ -11,6 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### FAKE or REAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"https://media2.govtech.com/images/940*575/shutterstock_668033083.jpg\" width=\"600px\"\"></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we have Data about some News. Where we have title of news, News in depth and having Label -**Fake or Real**.\n",
+    "so by using different libraries of Natural Language Toolkit and sklearn we will try to predict that given news title is fake or real."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.  Importing Libraries and Data"
    ]
   },
